Scaffold: Gradle multi-module backend + Vite frontend (Phase 1A)
Spring Boot 4.1.0-M4 + Java 26 (--enable-preview), JOOQ 3.20.3, Flyway 11.8.2
Modules: util, domain, service, scraper (stub), web
React 19 + Vite 8 + TypeScript + Prettier scaffold

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>